# knowrob_sherpa_queries

./: CMakeLists.txt  build.gradle  package.xml  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
knowrob_sherpa_queries/: build.gradle  build.gradle~
knowrob_sherpa_queries/src/main/java/com/github/knowrob_sherpa_queries/: VisualizationMarker.java
prolog/: init.pl  knowrob_sherpa_queries.pl
